<resources>
    <string name="app_name">Gastronaut</string>
    <string name="navigation_drawer_open">Menü öffnen</string>
    <string name="navigation_drawer_close">Menü schließen</string>
    <string name="nav_header_title">Gastronaut</string>
    <string name="nav_header_subtitle">office@gastronaut.events</string>
    <string name="nav_header_desc">Menükopf</string>
    <string name="action_settings">Einstellungen</string>
    <string name="nav_header_shoppingbasket">Warenkorb</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_cashTable">Tisch kassieren</string>
    <string name="menu_storno">Storno</string>
    <string name="menu_orderHistory">Bestellverlauf</string>
    <string name="menu_printout">Testausdruck</string>
    <string name="menu_qrcodescan">QR-Code Scanner</string>
    <string name="menu_darkmode">Darkmode</string>
</resources>