<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_cashTable"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cashTable" />
        <item
            android:id="@+id/nav_storno"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_storno" />
        <item
            android:id="@+id/nav_orderHistory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_orderHistory" />
        <item
            android:id="@+id/nav_printout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_printout" />
        <item
            android:id="@+id/nav_qrcodescan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_qrcodescan" />
        <item
            android:id="@+id/switch_darkmode"
            android:title="@string/menu_darkmode"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
    </group>
</menu>